force-app/main/default/objects/Score__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>HCT Number</inlineHelpText>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Scores</relationshipLabel>
    <relationshipName>Scores</relationshipName>
    <type>Lookup</type>
</CustomField>