force-app/main/default/objects/Score__c/fields/HCP_Contact__c.field-meta.xml
<CustomField>
    <fullName>HCP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Scores</relationshipLabel>
    <relationshipName>Scores</relationshipName>
    <type>Lookup</type>
</CustomField>