force-app/main/default/objects/Score__c/fields/PI_Override_Status__c.field-meta.xml
<CustomField>
    <fullName>PI_Override_Status__c</fullName>
    <formula>TEXT(Study_Site__r.Override_PI_Referral_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI Override Status</label>
    <type>Text</type>
</CustomField>