force-app/main/default/objects/Score__c/fields/Relative_Score__c.field-meta.xml
<CustomField>
    <fullName>Relative_Score__c</fullName>
    <description>Relative  Score- how good of a referrer is the HCP? How good of a site member is the PI?</description>
    <inlineHelpText>Relative  Score- how good of a referrer is the HCP? How good of a site member is the PI?</inlineHelpText>
    <label>Relative Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>